# file_searcher

./: .gitignore  CMakeLists.txt  compile.sh
file/: main.cpp
include/: define_common.h  lib_search.h  lib_str.h  libsearch.h  libstr.h  main.h  platform.h
src/: lib_search.cpp  lib_str.c  main.cpp
src/lib/: libsearch.cpp  libstr.c
